# System-Programming

SP_1/: CMakeLists.txt  main.c
SP_1/SP_1_sub/: CMakeLists.txt  fuctions.c  fuctions.h  main.c  tests.c  tests.h
SP_2/: CMakeLists.txt  main.c
SP_3/: CMakeLists.txt  InteractiveFunctions.c  InteractiveFunctions.h  functions.c  functions.h  main.c  structs.h
SP_4/: CMakeLists.txt  Departments  FileFunctions.c  FileFunctions.h  Save  functions.c  functions.h  main.c  makefile  structs.h
SP_5/: CMakeLists.txt  Makefile  Makefile.in  README.txt  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  functions.c  functions.h  makefile.am
SP_5/Build_Client/: Client  Makefile  Makefile.am  Makefile.in
SP_5/Build_Server/: CMakeCache.txt  Makefile  cmake_install.cmake
SP_5/Client/: CMakeLists.txt  Client.c  Client.h  OutFuncs.c  OutFuncs.h  main.c
SP_5/Client/.deps/: Client.Po  OutFuncs.Po  main.Po
SP_5/Server/: CMakeLists.txt  OutFuncs.c  OutFuncs.h  Server.c  Server.h  main.c
SP_5/autom4te.cache/: output.1  requests  traces.0  traces.1
SP_5/test/: CMakeCache.txt  Makefile  cmake_install.cmake
SP_6/: ARM.s  CMakeLists.txt  main.c
SP_6/ARM/: SP_6_aarch64.s  readme.txt  Методический материал (ARM(32bit)).docx
SP_6/MIPS/: SP_6_MIPS_32.s
SP_6/x86/: SP_6_x86_32.s
